Fix sync setup UI not updated when passphrase entered

This fixes a regression introduced in
https://chromium-review.googlesource.com/1152812 due to an accidental
behavioral change that dropped a notification to observers when the
sync setup UI is opened (i.e. SyncServiceCrypto::OnPassphraseAccepted()
always notified observers prior to the offending patch).

This patch reverts that behavioral change.

Bug: 870256
Change-Id: If51618607c85aee806f982680b5eb83b77b5c615
Reviewed-on: https://chromium-review.googlesource.com/1166904
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581542}
Former-commit-id: 5959e98f577493fa9597ed89d87a3afdd0c8243f